--- a/public/main.html
+++ b/public/main.html
@@ -11,8 +11,9 @@
 <body ng-controller="AuthorizationController">
     <!--Navigational bar-->
     <div ng-include src="'views/header.html'"></div>
-
     <!--Body-->
+
+    {{timeInMs}}
     <div class="container">
         <div class="row">
             <main class="col-xs-12">
@@ -37,5 +38,11 @@
 
     <!-- App JS -->
     <script src="js/app.js"> </script>
+    <script src="js/services.js"> </script>
+    <script src="js/controllers.js"> </script>
+    <script src="js/javascript.js"> </script>
+
+
+
 </body>
 </html>
